--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -72,7 +72,7 @@ svg {
 }
 #chart-ouput .message {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
   overflow: hidden;
   /* display: table-cell; */
   width: 0;
@@ -80,6 +80,11 @@ svg {
   opacity: 0;
   border-collapse: collapse;
   transition: opacity .2s linear;
+}
+#chart-ouput .msg-container.on > .message {
+  width: 100%;
+  height: auto;
+  opacity: 1;
 }
 
 #current-message .message {
