--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -47,7 +47,7 @@ svg {
   left: 150px;
   bottom: 0;
   font-size: 12px;
-  display: table;
+  /* display: table; */
   border-collapse: collapse;
   -webkit-box-sizing: border-box;
 }
