--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -53,11 +53,12 @@ svg {
 }
 #chart-ouput .msg-container {
   display: table-cell;
-  height: 20px;
+  height: 0;
   overflow: hidden;
   transition: width .2s linear;
   position: relative;
   cursor: pointer;
+  /* table-layout: fixed; */
 }
 #chart-ouput .msg-container:before {
   width: 100%;
@@ -73,9 +74,12 @@ svg {
   display: table;
   width: 100%;
   border-collapse: collapse;
-  min-height: 20px;
+  /* min-height: 20px; */
   table-layout: fixed;
-  margin-top: -11px;
+  /* margin-top: -7px; */
+  /* padding-top: 20px; */
+  height: 20px;
+  margin-top: 11px;
 }
 #chart-ouput .message {
   margin: 0;
@@ -87,6 +91,9 @@ svg {
   opacity: 0;
   border-collapse: collapse;
   transition: opacity .2s linear;
+  border: 0;
+  box-sizing: border-box;
+  display: none;
 }
 #chart-ouput .current > .message {
   background-color: #eee;
@@ -95,6 +102,7 @@ svg {
   width: 100%;
   height: auto;
   opacity: 1;
+  display: block;
 }
 
 #current-message .message {
