--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -39,7 +39,7 @@ svg {
 #chart-ouput {
   width: 400px;
   margin: 0;
-  background-color: rgba(50,50,50,.5);
+  background-color: rgba(250,255,255,.5);
   overflow-y: scroll;
   max-height: 100%;
   position: fixed;
@@ -47,9 +47,12 @@ svg {
   left: 150px;
   bottom: 0;
   font-size: 12px;
-  /* display: table; */
   border-collapse: collapse;
   -webkit-box-sizing: border-box;
+  transition: width .5s ease;
+  padding: 10px;
+  /* box-shadow: 0 0 15px rgba(100,100,100,.5); */
+  border-right: 1px solid #ccc;
 }
 #chart-ouput:hover {
   width: 1000px;
@@ -59,39 +62,31 @@ svg {
   display: table-cell;
   height: 10px;
   overflow: hidden;
-  transition: width .2s linear;
-  /* position: relative; */
+  /* transition: width .2s linear; */
   cursor: pointer;
-  /* table-layout: fixed; */
   padding: 0;
+  /* box-sizing: border-box; */
 }
 #chart-ouput .msg-container:before {
   width: 100%;
   content: " ";
-  background-color: #000;
-  /* position: absolute; */
-  /* left: 0; */
-  /* top: 0; */
+  background-color: #ccc;
   height: 10px;
-  border: 1px solid #fff;
+  border: 1px solid #666;
   display: block;
 }
 #chart-ouput .children-container {
   display: table;
   width: 100%;
   border-collapse: collapse;
-  /* min-height: 20px; */
   table-layout: fixed;
-  /* margin-top: -7px; */
-  /* padding-top: 20px; */
-  /* height: 10px; */
-  /* margin-top: 11px; */
+  margin-top: -1px;
+  /* border:  1px solid red; */
 }
 #chart-ouput .message {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  /* display: table-cell; */
   width: 0;
   height: 0px;
   opacity: 0;
@@ -99,7 +94,6 @@ svg {
   transition: opacity .2s linear;
   border: 0;
   box-sizing: border-box;
-  /* display: none; */
 }
 #chart-ouput .current > .message {
   background-color: #eee;
@@ -119,22 +113,74 @@ svg {
 
 #chart-control {
   width: 150px;
-  margin: 0;
-  float: left;
   font-size: 12px;
-  padding: 10px;
+  position: fixed;
+  left:  0;
+  top: 0;
+  bottom:  0;
+  box-shadow: 0 0 15px rgba(100,100,100,.5);
+  z-index: 100;
 }
 #chart-control h1 {
   color: #fff;
   background-color: #f30;
+  margin: 0;
+  padding: 10px;
+  font-size: 12px;
+  display: block;
+  font-weight: bold;
+}
+#chart-control > div {
+  padding: 10px;
 }
 #chart-control h2 {
   text-transform: uppercase;
-  font-weight: 200;
-  font-size: 14px;
+  font-weight: bold;
+  font-size: 12px;
+  color: #aaa;
+  margin: 0;
 }
-#chart-control ul {
-  color: #666;
+#chart-control li {
+  color: #aaa;
+  list-style: none;
+}
+#chart-control .check.on {
+  color: #000;
+}
+
+#chart-control .check {
+  position: relative;
+  padding: 5px 0;
+  cursor: pointer;
+}
+#chart-control .check:before {
+  display: inline-block;
+  background-color: #ccc;
+  width: 18px;
+  height: 12px;
+  content:  " ";
+  margin-right: 3px;
+  border-radius: 2px;
+}
+#chart-control .check:after {
+  display: block;
+  position: absolute;
+  left: 2px;
+  top: 8px;
+  width: 8px;
+  height: 8px;
+  content: " ";
+  background-color: #000;
+  border-radius: 2px;
+  transition: left .2s ease;
+}
+#chart-control .on.check:after {
+  left: 8px;
+  background-color: #f30;
+}
+
+#check-all-users {
+  background-color: #f5f5f5;
 }
 #users-list {
   padding: 2px;
@@ -143,17 +189,16 @@ svg {
 
 }
 #users-list li {
-  list-style: none;
-  cursor: pointer;
+  border-top: 1px solid #ccc;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
-#users-list li:hover {
-  background-color: #000;
-  color: #fff;
-}
-
 #chart-control .list {
-  max-height: 150px;
+  max-height: 180px;
   overflow-y:scroll;
+  margin: 0;
+  padding: 0;
 }
 
 #chart-control img {
