--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -7,7 +7,6 @@ body {
 
 svg {
   position: absolute;
-  /* left: 200px; */
   top: 0;
   left: 0;
   right: 0;
@@ -28,7 +27,7 @@ svg {
 
 .link {
   fill: none;
-  stroke: #999;
+  /*stroke: #999;*/
   stroke-width: .2px;
 }
 
@@ -181,6 +180,8 @@ svg {
 
 #check-all-users {
   background-color: #f5f5f5;
+  border-bottom: 1px solid #ccc;
+  box-shadow: 0 5px 5px -4px rgba(100,100,100,.5);
 }
 #users-list {
   padding: 2px;
