--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -15,7 +15,6 @@ svg {
 }
 
 .node circle {
-  fill: #f30;
   stroke: #fff;
   stroke-width: .1px;
   cursor: pointer;
@@ -35,8 +34,8 @@ svg {
 /* Elementos HTML */
 /******************/
 
-#chart-ouput {
-  width: 400px;
+#chart-messages {
+  width: 300px;
   margin: 0;
   background-color: rgba(250,255,255,.5);
   overflow-y: scroll;
@@ -46,22 +45,18 @@ svg {
   left: 150px;
   bottom: 0;
   font-size: 12px;
-  border-collapse: collapse;
+  /*border-collapse: collapse;*/
   -webkit-box-sizing: border-box;
-  transition: width .5s ease;
-  padding: 10px;
-  /* box-shadow: 0 0 15px rgba(100,100,100,.5); */
   border-right: 1px solid #ccc;
 }
-#chart-ouput:hover {
-  width: 1000px;
-  transition: width .2s linear;
+
+#chart-ouput {
+  padding: 10px;
 }
 #chart-ouput .msg-container {
   display: table-cell;
   height: 10px;
   overflow: hidden;
-  /* transition: width .2s linear; */
   cursor: pointer;
   padding: 0;
   /* box-sizing: border-box; */
@@ -69,10 +64,15 @@ svg {
 #chart-ouput .msg-container:before {
   width: 100%;
   content: " ";
-  background-color: #ccc;
   height: 10px;
-  border: 1px solid #666;
+  border: 1px solid #fff;
   display: block;
+}
+#chart-ouput .msg-container.filter:before {
+  background-color: #f30;
+}
+#chart-ouput .msg-container.nofilter:before {
+  background-color: #eee;
 }
 #chart-ouput .children-container {
   display: table;
@@ -80,7 +80,6 @@ svg {
   border-collapse: collapse;
   table-layout: fixed;
   margin-top: -1px;
-  /* border:  1px solid red; */
 }
 #chart-ouput .message {
   margin: 0;
@@ -111,6 +110,7 @@ svg {
 }
 
 #chart-control {
+  background-color: #fff;
   width: 150px;
   font-size: 12px;
   position: fixed;
@@ -119,16 +119,35 @@ svg {
   bottom:  0;
   box-shadow: 0 0 15px rgba(100,100,100,.5);
   z-index: 100;
+  overflow-x: hidden;
 }
-#chart-control h1 {
+#conversation h1 {
   color: #fff;
   background-color: #f30;
   margin: 0;
   padding: 10px;
-  font-size: 12px;
+  font-size: 14px;
   display: block;
   font-weight: bold;
+  position: relative;
 }
+#conversation .expand {
+  position: absolute;
+  background-color: #000;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  /* width: 20px; */
+  padding: 10px;
+  cursor: pointer;
+}
+#conversation .expand.on:before {
+  -webkit-transform: rotate(180deg);
+}
+.expandable {
+  transition: width .5s ease;
+}
+
 #chart-control > div {
   padding: 10px;
 }
@@ -137,11 +156,22 @@ svg {
   font-weight: bold;
   font-size: 12px;
   color: #aaa;
-  margin: 0;
+  margin: 10px 0 5px 0;
+  border-bottom: 2px solid #ccc;
 }
-#chart-control li {
+#chart-control .item {
   color: #aaa;
   list-style: none;
+  white-space: nowrap;
+  padding: 3px;
+  border-top: 1px solid #ccc;
+  display: list-item;
+}
+#chart-control .item span {
+  display: inline-block;
+  padding: 5px 0;
+  margin-right: 5px;
+  vertical-align: middle;
 }
 #chart-control .check.on {
   color: #000;
@@ -149,8 +179,11 @@ svg {
 
 #chart-control .check {
   position: relative;
-  padding: 5px 0;
+  /* padding: 5px 0; */
   cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 #chart-control .check:before {
   display: inline-block;
@@ -178,28 +211,45 @@ svg {
   background-color: #f30;
 }
 
-#check-all-users {
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #ccc;
-  box-shadow: 0 5px 5px -4px rgba(100,100,100,.5);
-}
-#users-list {
-  padding: 2px;
-  max-height: 500px;
-  overflow-y: scroll;
-
-}
-#users-list li {
-  border-top: 1px solid #ccc;
+#users-list .color-picker {
+  /* border: 1px solid #ccc; */
+  width: 10px;
+  height: 10px;
+  padding: 0;
   overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  border-radius: 200px;
+}
+#users-list input[type="color"] {
+  opacity: 0;
+}
+span:nth-child(1) {
+  width: 110px;
+}
+span:nth-child(2) {
+  width: 10px;
+}
+span:nth-child(3) {
+  width: 70px;
+  text-align: center;
+}
+span:nth-child(4) {
+  width: 70px;
+  text-align: center;
+}
+span:nth-child(5) {
+  width: 70px;
+  text-align: center;
 }
 #chart-control .list {
   max-height: 180px;
   overflow-y:scroll;
   margin: 0;
   padding: 0;
+}
+#chart-control .list-head {
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #ccc;
+  box-shadow: 0 5px 5px -4px rgba(100,100,100,.5);
 }
 
 #chart-control img {
