--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -170,7 +170,7 @@ svg {
 #chart-control .item span {
   display: inline-block;
   padding: 5px 0;
-  margin-right: 5px;
+  margin-right: 3px;
   vertical-align: middle;
 }
 #chart-control .check.on {
@@ -179,7 +179,7 @@ svg {
 
 #chart-control .check {
   position: relative;
-  /* padding: 5px 0; */
+  padding: 5px 0;
   cursor: pointer;
   overflow: hidden;
   white-space: nowrap;
@@ -211,13 +211,23 @@ svg {
   background-color: #f30;
 }
 
-#users-list .color-picker {
+#chart-control .item .color-picker {
   /* border: 1px solid #ccc; */
   width: 10px;
   height: 10px;
   padding: 0;
   overflow: hidden;
   border-radius: 200px;
+  padding: 0;
+}
+#check-all-users {
+  margin-left: 5px;
+  vertical-align: middle;
+}
+#check-all-users:after {
+  /* margin-left: 15px; */
+  /* padding: 0; */
+  top: 8px !important;
 }
 #users-list input[type="color"] {
   opacity: 0;
@@ -229,15 +239,15 @@ span:nth-child(2) {
   width: 10px;
 }
 span:nth-child(3) {
-  width: 70px;
+  width: 75px;
   text-align: center;
 }
 span:nth-child(4) {
-  width: 70px;
+  width: 75px;
   text-align: center;
 }
 span:nth-child(5) {
-  width: 70px;
+  width: 80px;
   text-align: center;
 }
 #chart-control .list {
@@ -245,13 +255,29 @@ span:nth-child(5) {
   overflow-y:scroll;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 #chart-control .list-head {
   background-color: #f5f5f5;
   border-bottom: 1px solid #ccc;
   box-shadow: 0 5px 5px -4px rgba(100,100,100,.5);
+  /* font-weight: bold !important; */
+}
+#chart-control .list-head .fa {
+  font-weight: bold;
+  color: #666;
+  cursor: pointer;
+}
+#chart-control .list-head .fa:hover {
+  background-color: #ddd;
+}
+#chart-control .list-head .fa:before {
+  font-weight: normal;
 }
 
 #chart-control img {
-  max-width: 100px;
+  height: 100px;
+  margin-right: 5px;
+  float: left;
+  margin-top: 5px;
 }
