--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -51,55 +51,50 @@ svg {
 #chart-ouput {
   padding: 10px;
 }
-#chart-ouput .msg-container {
+#chart-messages .msg-container {
   display: table-cell;
-  height: 10px;
   overflow: hidden;
   cursor: pointer;
   padding: 0;
-  /* box-sizing: border-box; */
+  vertical-align: top;
+  position: relative;
 }
-#chart-ouput .msg-container .handle {
+#chart-messages .msg-container .handle {
   width: 100%;
-  height: 10px;
+  padding: 4px 0;
+  border-top: 1px solid #fff;
+}
+#chart-messages.on .msg-container .handle {
   border: 1px solid #fff;
+  border-bottom:  none;
 }
-#chart-ouput .msg-container.sel .handle {
-  /*background-color: #f30;*/
-  /*background-color: attr(data-color color);*/
-}
-#chart-ouput .msg-container.nosel .handle {
-/*  background-color: #eee;*/
-}
-#chart-ouput .children-container {
+#chart-messages .children-container {
   display: table;
   width: 100%;
-  border-collapse: collapse;
   table-layout: fixed;
-  margin-top: -1px;
 }
-#chart-ouput .message {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  width: 0;
-  height: 0px;
-  opacity: 0;
-  border-collapse: collapse;
-  transition: opacity .2s linear;
+#chart-messages .message {
   border: 0;
-  box-sizing: border-box;
 }
-#chart-ouput .current > .message {
+#chart-messages .message .reply2link, #chart-messages .message .thlink {
+  display: none;
+}
+#chart-messages .current > .message {
   background-color: #eee;
 }
-#chart-ouput .msg-container.on > .message {
-  width: 100%;
-  height: auto;
-  opacity: 1;
+#chart-messages .msg-container .msg-container.on:before {
   display: block;
+  content: "\00D7";
+  background-color: #000;
+  color: #fff;
+  height: 15px;
+  width: 15px;
+  border: 1px solid #fff;
+  position: absolute;
+  right: -1px;
+  top: 0;
+  text-align: center;
 }
-
 #current-message .message {
   position: absolute;
   background-color: #fff;
@@ -134,7 +129,6 @@ svg {
   right: 0;
   top: 0;
   bottom: 0;
-  /* width: 20px; */
   padding: 10px;
   cursor: pointer;
 }
@@ -162,11 +156,9 @@ svg {
   white-space: nowrap;
   padding: 5px 0;
   border-top: 1px solid #ccc;
-  /* display: list-item; */
 }
 #chart-control .item span {
   display: inline-block;
-  /* padding: 5px 0; */
   margin-right: 3px;
   vertical-align: middle;
 }
@@ -221,11 +213,7 @@ svg {
   margin-left: 5px;
   vertical-align: middle;
 }
-#check-all-users:after {
-  /* margin-left: 15px; */
-  /* padding: 0; */
-  /* top: 8px !important; */
-}
+
 #users-list input[type="color"] {
   opacity: 0;
 }
@@ -258,7 +246,6 @@ span:nth-child(5) {
   background-color: #f5f5f5;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 5px 5px 0 rgba(100,100,100,.2);
-  /* font-weight: bold !important; */
 }
 #chart-control .list-head span {
   font-weight: bold;
