--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -10,9 +10,10 @@ body {
 #d3-chart {
   position: absolute;
   top: 0;
-  left: 450px;
+  left: 600px;
   right: 0;
   bottom: 0;
+  border:  1px solid red;
 }
 
 .node circle {
@@ -31,25 +32,26 @@ body {
 /******************/
 /* Elementos HTML */
 /******************/
-
-#chart-messages {
-  width: 300px;
+.expandable {
   margin: 0;
-  background-color: rgba(255,255,255,.5);
+  background-color: rgba(255,255,255,1);
   overflow-y: scroll;
   max-height: 100%;
   position: fixed;
   top: 0;
-  left: 150px;
   bottom: 0;
   font-size: 12px;
   -webkit-box-sizing: border-box;
   border-right: 1px solid #ccc;
+  overflow-x: hidden;
+  box-shadow: 0 0 15px rgba(100,100,100,.5);
+  transition: width .5s ease; 
+}
+#chart-messages {
+  width: 300px;
+  left: 300px;
 }
 
-#chart-ouput {
-  padding: 10px;
-}
 #chart-messages .msg-container {
   display: table-cell;
   overflow: hidden;
@@ -74,6 +76,11 @@ body {
 }
 #chart-messages .message {
   border: 0;
+  max-width: 500px;
+}
+#chart-messages.on .message {
+  margin-left: auto;
+  margin-right: auto;
 }
 #chart-messages .message .reply2link, #chart-messages .message .thlink {
   display: none;
@@ -94,6 +101,7 @@ body {
   top: 0;
   text-align: center;
 }
+
 #current-message .message {
   position: absolute;
   background-color: #fff;
@@ -101,18 +109,10 @@ body {
 }
 
 #chart-control {
-  background-color: rgba(255,255,255,.9);
   width: 150px;
-  font-size: 12px;
-  position: fixed;
   left:  0;
-  top: 0;
-  bottom:  0;
-  box-shadow: 0 0 15px rgba(100,100,100,.5);
-  z-index: 100;
-  overflow-x: hidden;
 }
-#conversation h1 {
+.expandable h1 {
   color: #fff;
   background-color: #f30;
   margin: 0;
@@ -122,7 +122,7 @@ body {
   font-weight: bold;
   position: relative;
 }
-#conversation .expand {
+.expandable .expand {
   position: absolute;
   background-color: #000;
   right: 0;
@@ -131,23 +131,25 @@ body {
   padding: 10px;
   cursor: pointer;
 }
-.expandable {
-   transition: width .5s ease; 
+.expandable p {
+  color: #666;
+  font-size: 10px;
+  padding: 0 10px;
 }
 .expandable.on .expand:before {
   -webkit-transform: rotate(180deg);
 }
 
-#chart-control > div {
+.expandable > div {
   padding: 0 10px;
 }
-#chart-control h2 {
+.expandable h2 {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 12px;
   color: #aaa;
-  margin: 5px 0 2px 0;
-  border-bottom: 2px solid #ccc;
+  margin: 5px 0;
+  /* border-bottom: 2px solid #ccc; */
 }
 #chart-control .item {
   color: #aaa;
@@ -175,11 +177,15 @@ body {
 #chart-control .check:before {
   display: inline-block;
   background-color: #ccc;
-  width: 18px;
-  height: 12px;
+  width: 16px;
+  height: 10px;
   content:  " ";
   margin-right: 3px;
   border-radius: 2px;
+  border-top:  1px solid #666;
+  border-left: 1px solid #666;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 #chart-control .check:after {
   display: block;
@@ -193,6 +199,9 @@ body {
   border-radius: 2px;
   transition: left .2s ease;
 }
+#chart-control .check.on:before {
+  background-color: #fff;
+}
 #chart-control .on.check:after {
   left: 8px;
   background-color: #f30;
@@ -203,14 +212,14 @@ body {
   vertical-align: middle;
 }
 
-#users-list input[type="color"] {
+.users-list input[type="color"] {
   opacity: 0;
 }
 
-#users-list .nickname {
+.users-list .nickname {
   width: 115px;
 }
-#users-list .color-picker {
+.users-list .color-picker {
   width: 10px;
   height: 10px;
   padding: 0;
@@ -218,23 +227,23 @@ body {
   border-radius: 200px;
   padding: 0;
 }
-#users-list .nmessages {
+.users-list .nmessages {
   width: 75px;
   text-align: center;
 }
-#users-list .ndeleted {
+.users-list .ndeleted {
   width: 75px;
   text-align: center;
 }
-#users-list .nwords {
+.users-list .nwords {
   width: 80px;
   text-align: center;
 }
-#users-list .nreplies {
+.users-list .nreplies {
   width: 80px;
   text-align: center;
 }
-#chart-control .list {
+.expandable .list {
   max-height: 180px;
   overflow-y:scroll;
   margin: 0;
@@ -242,67 +251,73 @@ body {
   overflow-x: hidden;
 }
 
-#chart-control .list-head {
+.expandable .list-head {
   background-color: #f5f5f5;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 5px 5px 0 rgba(100,100,100,.2);
 }
 
-#chart-control .list-head span {
+.expandable .list-head span {
   font-weight: bold;
   color: #666;
   cursor: pointer;
 }
 
-#chart-control .list-head span:hover {
+.expandable .list-head span:hover {
   color: #000;
 }
-#chart-control .list-head span:before {
+.expandable .list-head span:before {
   font-weight: normal;
   margin-left: 2px;
 }
 
 /* palabras */
-#words-list .word {
+.words-list .word {
   font-size: 10px;
   text-transform: uppercase;
   overflow: hidden;   
   white-space: nowrap;   
   text-overflow: ellipsis;
 }
-#words-list .word:hover, #words-list .word:hover:before {
+.words-list .word:hover, #words-list .word:hover:before {
   background-color: #000;
   color: #fff;
   cursor: pointer;
 }
-#words-list .list {
+.words-list .list {
   counter-reset: nwords;
 }
-#words-list li:before {
+.words-list li:before {
   content: counter(nwords, decimal-leading-zero);
   font-size: 8px;
   counter-increment: nwords;
-  background-color: #aaa;
+  /* background-color: #aaa; */
   padding: 2px;
-  color: #fff;
+  /* color: #666; */
   width: 10px;
   height: 10px;
   margin-right: 2px;
 }
-#words-list li.on:before, #words-list li.on:hover:before {
+.words-list li.on:before, .words-list li.on:hover:before {
   background-color: #f30;
+  color:  #fff;
 }
-.on #words-list .list {
+.on .words-list .list {
   -webkit-column-count: 5;
   -webkit-column-rule: 1px solid #ccc;
   overflow: hidden;
 }
 
-#chart-control img {
+.images-list img {
   height: 100px;
   margin-right: 5px;
   float: left;
   margin-top: 5px;
+}
+
+#chart-filter {
+  left: 150px;
+  width: 150px;
 }
 
 /* Diagramas de frecuencia */
@@ -322,7 +337,7 @@ body {
 #chart-options {
   position: absolute;
   right: 0;
-  top: 0;
+  bottom: 0;
   width: 200px;
   height: 200px;
   background-color: #eee;
