--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -32,6 +32,12 @@ body {
 /******************/
 /* Elementos HTML */
 /******************/
+#switch.and:before {
+  content: "TODOS";
+}
+#switch.or:before {
+  content: "ALGUNO";
+}
 .expandable {
   margin: 0;
   background-color: rgba(255,255,255,1);
