--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -38,7 +38,7 @@ body {
   transition: opacity .5s ease;
 }
 #d3-chart-interaction:hover .chord.fade {
-  opacity: .1;
+  opacity: .1 !important;
 }
 
 /******************/
