--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -356,20 +356,45 @@ h2.redtitle {
 /* OPciones de visualización */
 #chart-options {
   position: absolute;
+  margin: 10px;
   right: 0;
-  top: 0;
-  width: 200px;
-  height: 200px;
-  background-color: #eee;
-  border: 1px solid black;
-  padding: 5px;
+  top: 30px;
+  border: 1px solid #ccc;
+  padding: 10px;
 }
 #chart-options .option {
-  padding: 2px;
-  background-color: #000;
-  color: #fff;
+  position: relative;
+  padding-left: 20px;
   cursor: pointer;
+  display: inline-block;
 }
-#chart-options .option:hover {
-  background-color: #666;
+#chart-options .option:not(:first-child) {
+  margin-left: 10px;
+}
+#chart-options .option:before {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: 1px solid #ccc;
+  width: 15px;
+  height: 15px;
+  content: " ";
+  border-radius: 50px;
+}
+#chart-options .option:after {
+  display: block;
+  position: absolute;
+  content: " ";
+  background-color: #f30;
+  width: 9px;
+  height: 9px;
+  left: 4px;
+  top: 4px;
+  border-radius: 50px;
+  opacity: 0;
+  transition: opacity .2s ease;
+}
+#chart-options .option.on:after {
+  opacity: 1;
 }
