--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -395,7 +395,10 @@ h2.redtitle {
   top: 30px;
   border: 1px solid #ccc;
   padding: 10px;
-  background-color: rgba(255,255,255,.8);
+  background-color: rgba(255,255,255,.9);
+  font-size: 12px;
+  color:  #666;
+  box-shadow: 0 1px 2px #d9d9d9;
 }
 #chart-options .option {
   position: relative;
