--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -214,11 +214,11 @@ h2.redtitle {
   display: inline-block;
   margin-right: 3px;
 }
-#chart-control .check.on {
+#conversation .check.on {
   color: #000;
 }
 
-#chart-control .check {
+#conversation .check {
   position: relative;
   cursor: pointer;
   overflow: hidden;
@@ -226,7 +226,7 @@ h2.redtitle {
   text-overflow: ellipsis;
   vertical-align: middle;
 }
-#chart-control .check:before {
+#conversation .check:before {
   display: inline-block;
   background-color: #ccc;
   width: 16px;
@@ -239,7 +239,7 @@ h2.redtitle {
   border-right: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
 }
-#chart-control .check:after {
+#conversation .check:after {
   display: block;
   position: absolute;
   left: 2px;
@@ -251,10 +251,10 @@ h2.redtitle {
   border-radius: 2px;
   transition: left .2s ease;
 }
-#chart-control .check.on:before {
+#conversation .check.on:before {
   background-color: #fff;
 }
-#chart-control .on.check:after {
+#conversation .on.check:after {
   left: 8px;
   background-color: #f30;
 }
@@ -399,17 +399,36 @@ h2.redtitle {
   font-size: 12px;
   color:  #666;
   box-shadow: 0 1px 2px #d9d9d9;
+  opacity: .3;
+  transition: opacity .25s ease;
 }
-#chart-options .option {
+#chart-options:hover {
+  opacity: 1;
+}
+.options {
+  margin-top: 5px;
+}
+.layout, .option {
+  display: inline-block;
+  overflow: hidden;
+  
+}
+.option {
+  transition: width .2s linear;
+  width: 0;
+}
+.option.active {
+  width: 100px;
+}
+#conversation .radio {
   position: relative;
   padding-left: 20px;
   cursor: pointer;
-  display: inline-block;
 }
-#chart-options .option:not(:first-child) {
+#conversation .radio:not(:first-child) {
   margin-left: 10px;
 }
-#chart-options .option:before {
+#conversation .radio:before {
   display: block;
   position: absolute;
   left: 0;
@@ -420,7 +439,7 @@ h2.redtitle {
   content: " ";
   border-radius: 50px;
 }
-#chart-options .option:after {
+#conversation .radio:after {
   display: block;
   position: absolute;
   content: " ";
@@ -433,6 +452,6 @@ h2.redtitle {
   opacity: 0;
   transition: opacity .2s ease;
 }
-#chart-options .option.on:after {
+#conversation .radio.on:after {
   opacity: 1;
 }
