--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -407,19 +407,21 @@ h2.redtitle {
 }
 .options {
   margin-top: 5px;
+  height: 0;
+  overflow: hidden;
+  transition: height .25s linear;
+}
+.options.active {
+  height: 20px;
 }
 .layout, .option {
   display: inline-block;
   overflow: hidden;
-  
 }
 .option {
-  transition: width .2s linear;
-  width: 0;
+    vertical-align: middle;
 }
-.option.active {
-  width: 100px;
-}
+
 #conversation .radio {
   position: relative;
   padding-left: 20px;
